--- a/dokumentointi/pit-reports/201604291934/hyppypotku.hyppypotku.gameframework/index.html
+++ b/dokumentointi/pit-reports/201604291934/hyppypotku.hyppypotku.gameframework/index.html
@@ -61,7 +61,7 @@
 
 <h1>Pit Test Coverage Report</h1>
 <h2>Package Summary</h2>
-<h3>hyppypotku.hyppypotku.entities</h3>
+<h3>hyppypotku.hyppypotku.gameframework</h3>
 <table>
     <thead>
         <tr>
@@ -73,8 +73,8 @@
     <tbody>
         <tr>
             <td>1</td>
-            <td>67% <div class="coverage_bar"><div class="coverage_complete" style="width:67%"></div><div class="coverage_ledgend">12/18</div></div></td>
-            <td>50% <div class="coverage_bar"><div class="coverage_complete" style="width:50%"></div><div class="coverage_ledgend">2/4</div></div></td>
+            <td>70% <div class="coverage_bar"><div class="coverage_complete" style="width:70%"></div><div class="coverage_ledgend">57/81</div></div></td>
+            <td>22% <div class="coverage_bar"><div class="coverage_complete" style="width:22%"></div><div class="coverage_ledgend">11/50</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -92,9 +92,9 @@
     <tbody>
 
         <tr>
-            <td><a href="./Entity.java.html">Entity.java</a></td>
-            <td><div class="coveragePercentage">67% </div><div class="coverage_bar"><div class="coverage_complete" style="width:67%"></div><div class="coverage_ledgend">12/18</div></div></td>
-            <td><div class="coveragePercentage">50% </div><div class="coverage_bar"><div class="coverage_complete" style="width:50%"></div><div class="coverage_ledgend">2/4</div></div></td>
+            <td><a href="./Game.java.html">Game.java</a></td>
+            <td><div class="coveragePercentage">70% </div><div class="coverage_bar"><div class="coverage_complete" style="width:70%"></div><div class="coverage_ledgend">57/81</div></div></td>
+            <td><div class="coveragePercentage">22% </div><div class="coverage_bar"><div class="coverage_complete" style="width:22%"></div><div class="coverage_ledgend">11/50</div></div></td>
         </tr>
 
      </tbody>
