--- a/dokumentointi/site/xref/hyppypotku/hyppypotku/entities/characters/Character.html
+++ b/dokumentointi/site/xref/hyppypotku/hyppypotku/entities/characters/Character.html
@@ -91,7 +91,7 @@
 <a class="jxr_linenumber" name="L83" href="#L83">83</a>          <strong class="jxr_keyword">return</strong> <strong class="jxr_keyword">new</strong> Rectangle((<strong class="jxr_keyword">int</strong>) x, (<strong class="jxr_keyword">int</strong>) y, widht, height);
 <a class="jxr_linenumber" name="L84" href="#L84">84</a>      }
 <a class="jxr_linenumber" name="L85" href="#L85">85</a>  
-<a class="jxr_linenumber" name="L86" href="#L86">86</a>      <strong class="jxr_keyword">private</strong> <strong class="jxr_keyword">void</strong> checkOutOfBounds() {
+<a class="jxr_linenumber" name="L86" href="#L86">86</a>      <strong class="jxr_keyword">protected</strong> <strong class="jxr_keyword">void</strong> checkOutOfBounds() {
 <a class="jxr_linenumber" name="L87" href="#L87">87</a>          <strong class="jxr_keyword">if</strong> (x &lt;= 0) {
 <a class="jxr_linenumber" name="L88" href="#L88">88</a>              x = 0;
 <a class="jxr_linenumber" name="L89" href="#L89">89</a>          }
