--- a/dokumentointi/pit-reports/201604291934/hyppypotku.hyppypotku.entities/index.html
+++ b/dokumentointi/pit-reports/201604291934/hyppypotku.hyppypotku.entities/index.html
@@ -61,7 +61,7 @@
 
 <h1>Pit Test Coverage Report</h1>
 <h2>Package Summary</h2>
-<h3>hyppypotku.hyppypotku.gameframework</h3>
+<h3>hyppypotku.hyppypotku.entities</h3>
 <table>
     <thead>
         <tr>
@@ -73,8 +73,8 @@
     <tbody>
         <tr>
             <td>1</td>
-            <td>66% <div class="coverage_bar"><div class="coverage_complete" style="width:66%"></div><div class="coverage_ledgend">72/109</div></div></td>
-            <td>22% <div class="coverage_bar"><div class="coverage_complete" style="width:22%"></div><div class="coverage_ledgend">17/79</div></div></td>
+            <td>78% <div class="coverage_bar"><div class="coverage_complete" style="width:78%"></div><div class="coverage_ledgend">14/18</div></div></td>
+            <td>100% <div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">4/4</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -92,9 +92,9 @@
     <tbody>
 
         <tr>
-            <td><a href="./Game.java.html">Game.java</a></td>
-            <td><div class="coveragePercentage">66% </div><div class="coverage_bar"><div class="coverage_complete" style="width:66%"></div><div class="coverage_ledgend">72/109</div></div></td>
-            <td><div class="coveragePercentage">22% </div><div class="coverage_bar"><div class="coverage_complete" style="width:22%"></div><div class="coverage_ledgend">17/79</div></div></td>
+            <td><a href="./Entity.java.html">Entity.java</a></td>
+            <td><div class="coveragePercentage">78% </div><div class="coverage_bar"><div class="coverage_complete" style="width:78%"></div><div class="coverage_ledgend">14/18</div></div></td>
+            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">4/4</div></div></td>
         </tr>
 
      </tbody>
