--- a/dokumentointi/pit-reports/201604291934/hyppypotku.hyppypotku.gfx/ImageLoader.java.html
+++ b/dokumentointi/pit-reports/201604291934/hyppypotku.hyppypotku.gfx/ImageLoader.java.html
@@ -64,12 +64,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7544ac86_1'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4c447c09_1'/>
 1
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_1'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_1'></a>
 <span>
 </span>
 </td>
@@ -78,12 +78,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7544ac86_2'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4c447c09_2'/>
 2
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_2'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_2'></a>
 <span>
 </span>
 </td>
@@ -92,12 +92,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7544ac86_3'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4c447c09_3'/>
 3
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_3'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_3'></a>
 <span>
 </span>
 </td>
@@ -106,12 +106,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7544ac86_4'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4c447c09_4'/>
 4
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_4'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_4'></a>
 <span>
 </span>
 </td>
@@ -120,12 +120,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7544ac86_5'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4c447c09_5'/>
 5
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_5'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_5'></a>
 <span>
 </span>
 </td>
@@ -134,12 +134,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7544ac86_6'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4c447c09_6'/>
 6
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_6'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_6'></a>
 <span>
 </span>
 </td>
@@ -148,12 +148,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7544ac86_7'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4c447c09_7'/>
 7
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_7'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_7'></a>
 <span>
 </span>
 </td>
@@ -162,12 +162,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7544ac86_8'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4c447c09_8'/>
 8
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_8'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_8'></a>
 <span>
 </span>
 </td>
@@ -176,12 +176,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7544ac86_9'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4c447c09_9'/>
 9
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_9'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_9'></a>
 <span>
 </span>
 </td>
@@ -190,12 +190,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7544ac86_10'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4c447c09_10'/>
 10
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_10'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_10'></a>
 <span>
 </span>
 </td>
@@ -204,12 +204,12 @@ body{
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7544ac86_11'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4c447c09_11'/>
 11
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_11'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_11'></a>
 <span>
 </span>
 </td>
@@ -218,12 +218,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7544ac86_12'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4c447c09_12'/>
 12
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_12'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_12'></a>
 <span>
 </span>
 </td>
@@ -232,12 +232,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7544ac86_13'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4c447c09_13'/>
 13
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_13'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_13'></a>
 <span>
 </span>
 </td>
@@ -246,12 +246,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7544ac86_14'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4c447c09_14'/>
 14
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_14'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_14'></a>
 <span>
 </span>
 </td>
@@ -260,12 +260,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7544ac86_15'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4c447c09_15'/>
 15
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_15'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_15'></a>
 <span>
 </span>
 </td>
@@ -274,12 +274,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7544ac86_16'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4c447c09_16'/>
 16
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_16'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_16'></a>
 <span>
 </span>
 </td>
@@ -288,12 +288,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7544ac86_17'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4c447c09_17'/>
 17
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_17'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_17'></a>
 <span>
 </span>
 </td>
@@ -302,12 +302,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7544ac86_18'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4c447c09_18'/>
 18
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_18'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_18'></a>
 <span>
 </span>
 </td>
@@ -316,12 +316,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7544ac86_19'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4c447c09_19'/>
 19
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_19'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_19'></a>
 <span>
 </span>
 </td>
@@ -330,12 +330,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7544ac86_20'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4c447c09_20'/>
 20
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_20'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_20'></a>
 <span>
 </span>
 </td>
@@ -344,12 +344,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7544ac86_21'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4c447c09_21'/>
 21
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_21'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_21'></a>
 <span>
 </span>
 </td>
@@ -358,12 +358,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7544ac86_22'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4c447c09_22'/>
 22
 </td>
 <td class='killed'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_22'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_22'>1</a>
 <span>
 
 1. loadImage : mutated return of Object value for hyppypotku/hyppypotku/gfx/ImageLoader::loadImage to ( if (x != null) null else throw new RuntimeException ) &rarr; KILLED<br/>
@@ -375,12 +375,12 @@ body{
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7544ac86_23'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4c447c09_23'/>
 23
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_23'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_23'></a>
 <span>
 </span>
 </td>
@@ -389,12 +389,12 @@ body{
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7544ac86_24'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4c447c09_24'/>
 24
 </td>
 <td class='survived'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_24'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_24'>1</a>
 <span>
 
 1. loadImage : removed call to java/io/IOException::printStackTrace &rarr; NO_COVERAGE<br/>
@@ -406,12 +406,12 @@ body{
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7544ac86_25'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4c447c09_25'/>
 25
 </td>
 <td class='survived'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_25'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_25'>1</a>
 <span>
 
 1. loadImage : removed call to java/lang/System::exit &rarr; NO_COVERAGE<br/>
@@ -423,12 +423,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7544ac86_26'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4c447c09_26'/>
 26
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_26'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_26'></a>
 <span>
 </span>
 </td>
@@ -437,12 +437,12 @@ body{
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7544ac86_27'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4c447c09_27'/>
 27
 </td>
 <td class='survived'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_27'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_27'>1</a>
 <span>
 
 1. loadImage : mutated return of Object value for hyppypotku/hyppypotku/gfx/ImageLoader::loadImage to ( if (x != null) null else throw new RuntimeException ) &rarr; NO_COVERAGE<br/>
@@ -454,12 +454,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7544ac86_28'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4c447c09_28'/>
 28
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_28'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_28'></a>
 <span>
 </span>
 </td>
@@ -468,12 +468,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7544ac86_29'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4c447c09_29'/>
 29
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_29'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_29'></a>
 <span>
 </span>
 </td>
@@ -482,12 +482,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@7544ac86_30'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@4c447c09_30'/>
 30
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_30'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_30'></a>
 <span>
 </span>
 </td>
@@ -499,44 +499,44 @@ body{
 
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@7544ac86_22'>22</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@4c447c09_22'>22</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_22'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_22'/> 
 
 <p class='KILLED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>loadImage<br/><b>Killed by : </b>hyppypotku.hyppypotku.gameframework.GameTest.hyppypotku.hyppypotku.gameframework.GameTest</span></span> mutated return of Object value for hyppypotku/hyppypotku/gfx/ImageLoader::loadImage to ( if (x != null) null else throw new RuntimeException ) &rarr; KILLED</p> 
 </td>
 </tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@7544ac86_24'>24</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@4c447c09_24'>24</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_24'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_24'/> 
 
 <p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>loadImage<br/><b>Killed by : </b>none</span></span> removed call to java/io/IOException::printStackTrace &rarr; NO_COVERAGE</p> 
 </td>
 </tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@7544ac86_25'>25</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@4c447c09_25'>25</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_25'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_25'/> 
 
 <p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>loadImage<br/><b>Killed by : </b>none</span></span> removed call to java/lang/System::exit &rarr; NO_COVERAGE</p> 
 </td>
 </tr>
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@7544ac86_27'>27</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@4c447c09_27'>27</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@7544ac86_27'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@4c447c09_27'/> 
 
 <p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>loadImage<br/><b>Killed by : </b>none</span></span> mutated return of Object value for hyppypotku/hyppypotku/gfx/ImageLoader::loadImage to ( if (x != null) null else throw new RuntimeException ) &rarr; NO_COVERAGE</p> 
 </td>
@@ -566,7 +566,7 @@ body{
 
 <h2>Tests examined</h2>
 <ul>
-<li>hyppypotku.hyppypotku.gameframework.GameTest.hyppypotku.hyppypotku.gameframework.GameTest (321 ms)</li>
+<li>hyppypotku.hyppypotku.gameframework.GameTest.hyppypotku.hyppypotku.gameframework.GameTest (583 ms)</li>
 </ul>
 
 <br/>
