--- a/dokumentointi/pit-reports/201604291934/hyppypotku.hyppypotku.gfx/SpriteSheet.java.html
+++ b/dokumentointi/pit-reports/201604291934/hyppypotku.hyppypotku.gfx/SpriteSheet.java.html
@@ -64,12 +64,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_1'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_1'/>
 1
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_1'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_1'></a>
 <span>
 </span>
 </td>
@@ -78,12 +78,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_2'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_2'/>
 2
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_2'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_2'></a>
 <span>
 </span>
 </td>
@@ -92,12 +92,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_3'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_3'/>
 3
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_3'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_3'></a>
 <span>
 </span>
 </td>
@@ -106,12 +106,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_4'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_4'/>
 4
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_4'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_4'></a>
 <span>
 </span>
 </td>
@@ -120,12 +120,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_5'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_5'/>
 5
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_5'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_5'></a>
 <span>
 </span>
 </td>
@@ -134,12 +134,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_6'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_6'/>
 6
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_6'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_6'></a>
 <span>
 </span>
 </td>
@@ -148,12 +148,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_7'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_7'/>
 7
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_7'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_7'></a>
 <span>
 </span>
 </td>
@@ -162,12 +162,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_8'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_8'/>
 8
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_8'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_8'></a>
 <span>
 </span>
 </td>
@@ -176,12 +176,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_9'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_9'/>
 9
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_9'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_9'></a>
 <span>
 </span>
 </td>
@@ -190,12 +190,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_10'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_10'/>
 10
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_10'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_10'></a>
 <span>
 </span>
 </td>
@@ -204,12 +204,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_11'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_11'/>
 11
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_11'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_11'></a>
 <span>
 </span>
 </td>
@@ -218,12 +218,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_12'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_12'/>
 12
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_12'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_12'></a>
 <span>
 </span>
 </td>
@@ -232,12 +232,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_13'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_13'/>
 13
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_13'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_13'></a>
 <span>
 </span>
 </td>
@@ -246,12 +246,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_14'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_14'/>
 14
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_14'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_14'></a>
 <span>
 </span>
 </td>
@@ -260,12 +260,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_15'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_15'/>
 15
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_15'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_15'></a>
 <span>
 </span>
 </td>
@@ -274,12 +274,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_16'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_16'/>
 16
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_16'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_16'></a>
 <span>
 </span>
 </td>
@@ -288,12 +288,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_17'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_17'/>
 17
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_17'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_17'></a>
 <span>
 </span>
 </td>
@@ -302,12 +302,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_18'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_18'/>
 18
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_18'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_18'></a>
 <span>
 </span>
 </td>
@@ -316,12 +316,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_19'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_19'/>
 19
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_19'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_19'></a>
 <span>
 </span>
 </td>
@@ -330,12 +330,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_20'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_20'/>
 20
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_20'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_20'></a>
 <span>
 </span>
 </td>
@@ -344,12 +344,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_21'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_21'/>
 21
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_21'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_21'></a>
 <span>
 </span>
 </td>
@@ -358,12 +358,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_22'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_22'/>
 22
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_22'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_22'></a>
 <span>
 </span>
 </td>
@@ -372,12 +372,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_23'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_23'/>
 23
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_23'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_23'></a>
 <span>
 </span>
 </td>
@@ -386,12 +386,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_24'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_24'/>
 24
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_24'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_24'></a>
 <span>
 </span>
 </td>
@@ -400,12 +400,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_25'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_25'/>
 25
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_25'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_25'></a>
 <span>
 </span>
 </td>
@@ -414,12 +414,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_26'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_26'/>
 26
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_26'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_26'></a>
 <span>
 </span>
 </td>
@@ -428,12 +428,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_27'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_27'/>
 27
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_27'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_27'></a>
 <span>
 </span>
 </td>
@@ -442,12 +442,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_28'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_28'/>
 28
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_28'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_28'></a>
 <span>
 </span>
 </td>
@@ -456,12 +456,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_29'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_29'/>
 29
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_29'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_29'></a>
 <span>
 </span>
 </td>
@@ -470,12 +470,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_30'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_30'/>
 30
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_30'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_30'></a>
 <span>
 </span>
 </td>
@@ -484,12 +484,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_31'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_31'/>
 31
 </td>
 <td class='survived'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_31'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_31'>1</a>
 <span>
 
 1. crop : mutated return of Object value for hyppypotku/hyppypotku/gfx/SpriteSheet::crop to ( if (x != null) null else throw new RuntimeException ) &rarr; SURVIVED<br/>
@@ -501,12 +501,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_32'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_32'/>
 32
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_32'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_32'></a>
 <span>
 </span>
 </td>
@@ -515,12 +515,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6325f352_33'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@32fa809f_33'/>
 33
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_33'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_33'></a>
 <span>
 </span>
 </td>
@@ -532,11 +532,11 @@ body{
 
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@6325f352_31'>31</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@32fa809f_31'>31</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@6325f352_31'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@32fa809f_31'/> 
 
 <p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>crop<br/><b>Killed by : </b>none</span></span> mutated return of Object value for hyppypotku/hyppypotku/gfx/SpriteSheet::crop to ( if (x != null) null else throw new RuntimeException ) &rarr; SURVIVED</p> 
 </td>
@@ -566,7 +566,7 @@ body{
 
 <h2>Tests examined</h2>
 <ul>
-<li>hyppypotku.hyppypotku.gameframework.GameTest.hyppypotku.hyppypotku.gameframework.GameTest (321 ms)</li>
+<li>hyppypotku.hyppypotku.gameframework.GameTest.hyppypotku.hyppypotku.gameframework.GameTest (583 ms)</li>
 </ul>
 
 <br/>
