--- a/dokumentointi/pit-reports/201604291934/hyppypotku.hyppypotku.states/State.java.html
+++ b/dokumentointi/pit-reports/201604291934/hyppypotku.hyppypotku.states/State.java.html
@@ -64,12 +64,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_1'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_1'/>
 1
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_1'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_1'></a>
 <span>
 </span>
 </td>
@@ -78,12 +78,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_2'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_2'/>
 2
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_2'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_2'></a>
 <span>
 </span>
 </td>
@@ -92,12 +92,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_3'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_3'/>
 3
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_3'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_3'></a>
 <span>
 </span>
 </td>
@@ -106,12 +106,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_4'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_4'/>
 4
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_4'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_4'></a>
 <span>
 </span>
 </td>
@@ -120,12 +120,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_5'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_5'/>
 5
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_5'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_5'></a>
 <span>
 </span>
 </td>
@@ -134,12 +134,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_6'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_6'/>
 6
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_6'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_6'></a>
 <span>
 </span>
 </td>
@@ -148,12 +148,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_7'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_7'/>
 7
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_7'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_7'></a>
 <span>
 </span>
 </td>
@@ -162,12 +162,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_8'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_8'/>
 8
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_8'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_8'></a>
 <span>
 </span>
 </td>
@@ -176,12 +176,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_9'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_9'/>
 9
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_9'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_9'></a>
 <span>
 </span>
 </td>
@@ -190,12 +190,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_10'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_10'/>
 10
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_10'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_10'></a>
 <span>
 </span>
 </td>
@@ -204,12 +204,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_11'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_11'/>
 11
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_11'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_11'></a>
 <span>
 </span>
 </td>
@@ -218,12 +218,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_12'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_12'/>
 12
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_12'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_12'></a>
 <span>
 </span>
 </td>
@@ -232,12 +232,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_13'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_13'/>
 13
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_13'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_13'></a>
 <span>
 </span>
 </td>
@@ -246,12 +246,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_14'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_14'/>
 14
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_14'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_14'></a>
 <span>
 </span>
 </td>
@@ -260,12 +260,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_15'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_15'/>
 15
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_15'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_15'></a>
 <span>
 </span>
 </td>
@@ -274,12 +274,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_16'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_16'/>
 16
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_16'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_16'></a>
 <span>
 </span>
 </td>
@@ -288,12 +288,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_17'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_17'/>
 17
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_17'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_17'></a>
 <span>
 </span>
 </td>
@@ -302,12 +302,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_18'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_18'/>
 18
 </td>
 <td class='survived'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_18'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_18'>1</a>
 <span>
 
 1. getState : mutated return of Object value for hyppypotku/hyppypotku/states/State::getState to ( if (x != null) null else throw new RuntimeException ) &rarr; SURVIVED<br/>
@@ -319,12 +319,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_19'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_19'/>
 19
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_19'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_19'></a>
 <span>
 </span>
 </td>
@@ -333,12 +333,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_20'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_20'/>
 20
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_20'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_20'></a>
 <span>
 </span>
 </td>
@@ -347,12 +347,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_21'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_21'/>
 21
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_21'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_21'></a>
 <span>
 </span>
 </td>
@@ -361,12 +361,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_22'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_22'/>
 22
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_22'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_22'></a>
 <span>
 </span>
 </td>
@@ -375,12 +375,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_23'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_23'/>
 23
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_23'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_23'></a>
 <span>
 </span>
 </td>
@@ -389,12 +389,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_24'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_24'/>
 24
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_24'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_24'></a>
 <span>
 </span>
 </td>
@@ -403,12 +403,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_25'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_25'/>
 25
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_25'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_25'></a>
 <span>
 </span>
 </td>
@@ -417,12 +417,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_26'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_26'/>
 26
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_26'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_26'></a>
 <span>
 </span>
 </td>
@@ -431,12 +431,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_27'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_27'/>
 27
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_27'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_27'></a>
 <span>
 </span>
 </td>
@@ -445,12 +445,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_28'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_28'/>
 28
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_28'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_28'></a>
 <span>
 </span>
 </td>
@@ -459,12 +459,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_29'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_29'/>
 29
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_29'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_29'></a>
 <span>
 </span>
 </td>
@@ -473,12 +473,12 @@ body{
 
 <tr>
 <td class='covered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_30'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_30'/>
 30
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_30'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_30'></a>
 <span>
 </span>
 </td>
@@ -487,12 +487,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_31'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_31'/>
 31
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_31'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_31'></a>
 <span>
 </span>
 </td>
@@ -501,12 +501,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_32'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_32'/>
 32
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_32'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_32'></a>
 <span>
 </span>
 </td>
@@ -515,12 +515,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_33'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_33'/>
 33
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_33'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_33'></a>
 <span>
 </span>
 </td>
@@ -529,12 +529,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_34'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_34'/>
 34
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_34'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_34'></a>
 <span>
 </span>
 </td>
@@ -543,12 +543,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_35'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_35'/>
 35
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_35'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_35'></a>
 <span>
 </span>
 </td>
@@ -557,12 +557,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_36'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_36'/>
 36
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_36'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_36'></a>
 <span>
 </span>
 </td>
@@ -571,12 +571,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_37'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_37'/>
 37
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_37'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_37'></a>
 <span>
 </span>
 </td>
@@ -585,12 +585,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_38'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_38'/>
 38
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_38'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_38'></a>
 <span>
 </span>
 </td>
@@ -599,12 +599,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_39'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_39'/>
 39
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_39'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_39'></a>
 <span>
 </span>
 </td>
@@ -613,12 +613,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_40'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_40'/>
 40
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_40'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_40'></a>
 <span>
 </span>
 </td>
@@ -627,12 +627,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_41'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_41'/>
 41
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_41'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_41'></a>
 <span>
 </span>
 </td>
@@ -641,12 +641,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_42'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_42'/>
 42
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_42'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_42'></a>
 <span>
 </span>
 </td>
@@ -655,12 +655,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_43'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@1455154c_43'/>
 43
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_43'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_43'></a>
 <span>
 </span>
 </td>
@@ -672,11 +672,11 @@ body{
 
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_18'>18</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@1455154c_18'>18</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@6cd3ad8a_18'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@1455154c_18'/> 
 
 <p class='SURVIVED'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>getState<br/><b>Killed by : </b>none</span></span> mutated return of Object value for hyppypotku/hyppypotku/states/State::getState to ( if (x != null) null else throw new RuntimeException ) &rarr; SURVIVED</p> 
 </td>
@@ -706,7 +706,7 @@ body{
 
 <h2>Tests examined</h2>
 <ul>
-<li>hyppypotku.hyppypotku.gameframework.GameTest.hyppypotku.hyppypotku.gameframework.GameTest (321 ms)</li><li>hyppypotku.hyppypotku.window.WindowTest.hyppypotku.hyppypotku.window.WindowTest (63 ms)</li>
+<li>hyppypotku.hyppypotku.gameframework.GameTest.hyppypotku.hyppypotku.gameframework.GameTest (583 ms)</li><li>hyppypotku.hyppypotku.window.WindowTest.hyppypotku.hyppypotku.window.WindowTest (65 ms)</li>
 </ul>
 
 <br/>
