--- a/dokumentointi/pit-reports/201604291934/hyppypotku.hyppypotku.states/index.html
+++ b/dokumentointi/pit-reports/201604291934/hyppypotku.hyppypotku.states/index.html
@@ -72,9 +72,9 @@
     </thead>
     <tbody>
         <tr>
-            <td>2</td>
-            <td>95% <div class="coverage_bar"><div class="coverage_complete" style="width:95%"></div><div class="coverage_ledgend">19/20</div></div></td>
-            <td>0% <div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/6</div></div></td>
+            <td>4</td>
+            <td>34% <div class="coverage_bar"><div class="coverage_complete" style="width:34%"></div><div class="coverage_ledgend">28/83</div></div></td>
+            <td>11% <div class="coverage_bar"><div class="coverage_complete" style="width:11%"></div><div class="coverage_ledgend">6/53</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -93,14 +93,26 @@
 
         <tr>
             <td><a href="./GameState.java.html">GameState.java</a></td>
-            <td><div class="coveragePercentage">92% </div><div class="coverage_bar"><div class="coverage_complete" style="width:92%"></div><div class="coverage_ledgend">12/13</div></div></td>
-            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/5</div></div></td>
+            <td><div class="coveragePercentage">18% </div><div class="coverage_bar"><div class="coverage_complete" style="width:18%"></div><div class="coverage_ledgend">10/56</div></div></td>
+            <td><div class="coveragePercentage">14% </div><div class="coverage_bar"><div class="coverage_complete" style="width:14%"></div><div class="coverage_ledgend">6/44</div></div></td>
+        </tr>
+
+        <tr>
+            <td><a href="./MenuState.java.html">MenuState.java</a></td>
+            <td><div class="coveragePercentage">80% </div><div class="coverage_bar"><div class="coverage_complete" style="width:80%"></div><div class="coverage_ledgend">8/10</div></div></td>
+            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/4</div></div></td>
         </tr>
 
         <tr>
             <td><a href="./State.java.html">State.java</a></td>
             <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">7/7</div></div></td>
             <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/1</div></div></td>
+        </tr>
+
+        <tr>
+            <td><a href="./TutorialState.java.html">TutorialState.java</a></td>
+            <td><div class="coveragePercentage">30% </div><div class="coverage_bar"><div class="coverage_complete" style="width:30%"></div><div class="coverage_ledgend">3/10</div></div></td>
+            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/4</div></div></td>
         </tr>
 
      </tbody>
