--- a/dokumentointi/pit-reports/201605051513/hyppypotku.hyppypotku/Main.java.html
+++ b/dokumentointi/pit-reports/201605051513/hyppypotku.hyppypotku/Main.java.html
@@ -64,12 +64,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@67f77f6e_1'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6fbc1bb_1'/>
 1
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@67f77f6e_1'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6fbc1bb_1'></a>
 <span>
 </span>
 </td>
@@ -78,12 +78,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@67f77f6e_2'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6fbc1bb_2'/>
 2
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@67f77f6e_2'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6fbc1bb_2'></a>
 <span>
 </span>
 </td>
@@ -92,12 +92,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@67f77f6e_3'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6fbc1bb_3'/>
 3
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@67f77f6e_3'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6fbc1bb_3'></a>
 <span>
 </span>
 </td>
@@ -106,12 +106,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@67f77f6e_4'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6fbc1bb_4'/>
 4
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@67f77f6e_4'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6fbc1bb_4'></a>
 <span>
 </span>
 </td>
@@ -120,12 +120,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@67f77f6e_5'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6fbc1bb_5'/>
 5
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@67f77f6e_5'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6fbc1bb_5'></a>
 <span>
 </span>
 </td>
@@ -134,12 +134,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@67f77f6e_6'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6fbc1bb_6'/>
 6
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@67f77f6e_6'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6fbc1bb_6'></a>
 <span>
 </span>
 </td>
@@ -148,12 +148,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@67f77f6e_7'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6fbc1bb_7'/>
 7
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@67f77f6e_7'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6fbc1bb_7'></a>
 <span>
 </span>
 </td>
@@ -162,12 +162,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@67f77f6e_8'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6fbc1bb_8'/>
 8
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@67f77f6e_8'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6fbc1bb_8'></a>
 <span>
 </span>
 </td>
@@ -176,12 +176,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@67f77f6e_9'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6fbc1bb_9'/>
 9
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@67f77f6e_9'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6fbc1bb_9'></a>
 <span>
 </span>
 </td>
@@ -190,12 +190,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@67f77f6e_10'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6fbc1bb_10'/>
 10
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@67f77f6e_10'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6fbc1bb_10'></a>
 <span>
 </span>
 </td>
@@ -204,12 +204,12 @@ body{
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@67f77f6e_11'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6fbc1bb_11'/>
 11
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@67f77f6e_11'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6fbc1bb_11'></a>
 <span>
 </span>
 </td>
@@ -218,12 +218,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@67f77f6e_12'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6fbc1bb_12'/>
 12
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@67f77f6e_12'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6fbc1bb_12'></a>
 <span>
 </span>
 </td>
@@ -232,12 +232,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@67f77f6e_13'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6fbc1bb_13'/>
 13
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@67f77f6e_13'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6fbc1bb_13'></a>
 <span>
 </span>
 </td>
@@ -246,12 +246,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@67f77f6e_14'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6fbc1bb_14'/>
 14
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@67f77f6e_14'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6fbc1bb_14'></a>
 <span>
 </span>
 </td>
@@ -260,12 +260,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@67f77f6e_15'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6fbc1bb_15'/>
 15
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@67f77f6e_15'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6fbc1bb_15'></a>
 <span>
 </span>
 </td>
@@ -274,12 +274,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@67f77f6e_16'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6fbc1bb_16'/>
 16
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@67f77f6e_16'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6fbc1bb_16'></a>
 <span>
 </span>
 </td>
@@ -288,12 +288,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@67f77f6e_17'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6fbc1bb_17'/>
 17
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@67f77f6e_17'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6fbc1bb_17'></a>
 <span>
 </span>
 </td>
@@ -302,12 +302,12 @@ body{
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@67f77f6e_18'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6fbc1bb_18'/>
 18
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@67f77f6e_18'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6fbc1bb_18'></a>
 <span>
 </span>
 </td>
@@ -316,12 +316,12 @@ body{
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@67f77f6e_19'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6fbc1bb_19'/>
 19
 </td>
 <td class='survived'>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@67f77f6e_19'>1</a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6fbc1bb_19'>1</a>
 <span>
 
 1. main : removed call to hyppypotku/hyppypotku/gameframework/Game::start &rarr; NO_COVERAGE<br/>
@@ -333,12 +333,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@67f77f6e_20'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6fbc1bb_20'/>
 20
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@67f77f6e_20'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6fbc1bb_20'></a>
 <span>
 </span>
 </td>
@@ -347,12 +347,12 @@ body{
 
 <tr>
 <td class='uncovered'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@67f77f6e_21'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6fbc1bb_21'/>
 21
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@67f77f6e_21'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6fbc1bb_21'></a>
 <span>
 </span>
 </td>
@@ -361,12 +361,12 @@ body{
 
 <tr>
 <td class='na'>
-<a name='org.pitest.mutationtest.report.html.SourceFile@67f77f6e_22'/>
+<a name='org.pitest.mutationtest.report.html.SourceFile@6fbc1bb_22'/>
 22
 </td>
 <td class=''>
 <span class='pop'>
-<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@67f77f6e_22'></a>
+<a href='#grouporg.pitest.mutationtest.report.html.SourceFile@6fbc1bb_22'></a>
 <span>
 </span>
 </td>
@@ -378,11 +378,11 @@ body{
 
 
 <tr>
-<td><a href='#org.pitest.mutationtest.report.html.SourceFile@67f77f6e_19'>19</a></td> 
+<td><a href='#org.pitest.mutationtest.report.html.SourceFile@6fbc1bb_19'>19</a></td> 
 <td></td>
 <td>
 
-<a name='grouporg.pitest.mutationtest.report.html.SourceFile@67f77f6e_19'/> 
+<a name='grouporg.pitest.mutationtest.report.html.SourceFile@6fbc1bb_19'/> 
 
 <p class='NO_COVERAGE'><span class='pop'>1.<span><b>1</b><br/><b>Location : </b>main<br/><b>Killed by : </b>none</span></span> removed call to hyppypotku/hyppypotku/gameframework/Game::start &rarr; NO_COVERAGE</p> 
 </td>
